# hexcalc

./: .gitignore  Makefile.am  README.md  configure.ac
doc/man/: hexcalc.5
include/: colours.hh  command-line-reader.hh  core-state.hh  core.hh  exceptions.hh  faces.hh  history-index.hh  readline-interface.hh  reg-info.hh
specs/: sample-spec
src/: command-line-reader.cc  core-state.cc  core.cc  hexcalc.cc  history-index.cc  readline-interface.cc  reg-info.cc
